# sd-svc

./: Cargo.toml  README.md
src/rest-svc/: Cargo.toml
src/sd-svc/: Cargo.toml
src/sd-svc/src/: main.rs
src/simlin-cli/: tmp.csv
src/simlin-compat/src/: xmile.rs
src/simlin-compat/tests/: simulate.rs
test/: i2model015-simplifiedmay24-user1.stmx  iww-1-original.stmx  iww-1.stmx
test/sdeverywhere/models/elmcount/: elmcount.xmile
test/sdeverywhere/models/index/: index.xmile
test/sdeverywhere/models/preprocess/: expected.xmile  input.xmile
test/test-models/: .gitignore
